2007-12-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-group.c:
	* clutter/clutter-group.h: Add the clutter_group_add() convenience
	function; it's now "undeprecated" and implemented as a macro

	* clutter/clutter-stage.h: Add clutter_stage_add() as a convenience
	macro

	* clutter/cogl/cogl.h: Include just the needed headers instead
	of the whole clutter.h; this avoids rebuild cogl when not needed

2007-12-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* Makefile.am: Move tests build before docs, to cut down the
	distcheck failure discovery

	* clutter.symbols: Add clutter_texture_set_area_from_rgb_data()

	* clutter/clutter-actor.c:
	* clutter/clutter-script.c:
	* clutter/clutter-texture.c:
	* clutter/json/json-generator.c:
	* clutter/json/json-parser.c: Compilation fixes for passing distcheck

	* tests/test-grab.c:
	* tests/test-score.c:
	* tests/test-script.c:
	* tests/test-shader.c:
	* tests/test-unproject.c: Ditto as above

2007-12-21  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c:
	(clutter_label_ensure_layout): Avoid rounding errors in the layout
	computing when switching between Clutter units and Pango units.

2007-12-19  Øyvind Kolås  <pippin@o-hand.com>

	* clutter/clutter-texture.[ch]: (bug #675) added
	clutter_texture_set_area_from_rgb_data, sharing some of the
	initialization infrastructure with clutter_texture_set_from_rgb_data.

2007-12-20  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-container.c:
	(clutter_container_lower_child): Fix interface method call
	to actually call ClutterContainer::lower. (#670, Gwenole
	Beauchesne)

2007-12-20  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c:
	(clutter_label_query_coords): Return the bounding box set inside
	request_coords(), if any; otherwise, return the natural allocation
	of the label. (#678, reported by Gwenole Beauchesne)

	* tests/test-rotate.c: Align the label

2007-12-19  Tomas Frydrych  <tf@openedhand.com>
